docker-compose updated

--- a/.env
+++ b/.env
@@ -8,5 +8,5 @@ PORT=3000
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 
-MONGODB_URI=mongodb://127.0.0.1:27017/
+MONGODB_URI=mongodb://mongodb:27017/
 MONGODB_DB_MAIN=users_db
